change to SRS v0.5.8
